--- a/xpath.props
+++ b/xpath.props
@@ -1,8 +1,9 @@
 productListDivID: productLister
 productListXpath: //ul[contains(@class,'productLister gridView')]
-productNameDivXpath: div[contains(@class,'product')]/div[contains(@class,'productInfo')]/div[contains(@class,'productNameAndPromotions')]
+productNameAndLinkDivXpath: div[contains(@class,'product')]/div[contains(@class,'productInfo')]/div[contains(@class,'productNameAndPromotions')]
 priceDivXpath: .//div[starts-with(@id,'addItem_')]
 informationDivID: information
+NutritionTable: //*/table[contains(@class,'nutritionTable')]
 descriptionDivXpath: productcontent/htmlcontent/div[contains(@class,'productText')]
 energyTableRowXpath: //*/tr[th[starts-with(.,'Energy')]]
 
